# -semester-project

./: .gitmodules  CMakeLists.txt  Project1.sln  README.md  addnewclientwindow.h  authorisationwindow.h  authorisationwindow.ui  calculatorwindow.cpp  calculatorwindow.h  calculatorwindow.ui  clients.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainclientswindow.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newform.cpp  newform.h  newform.ui  newform.ui.autosave  pdf_lesha.cpp  window_system.cpp  window_system.h  window_system_values.cpp  window_system_values.h
db and pdf_creator/database/: CMakeLists.txt
db and pdf_creator/database/database/data_sheet_handler/: i_data_sheet_handler.h
db and pdf_creator/database/database/data_sheet_handler/filesystem_data_sheet_handler/: filesystem_data_sheet_handler.h
db and pdf_creator/database/database/data_sheet_handler/postgres_data_sheet_handler/: postgres_data_sheet_handler.cpp  postgres_data_sheet_handler.h
db and pdf_creator/database/database/db_accessor/postgres_db_accessor/: postgres_db_accessor.cpp  postgres_db_accessor.h
db and pdf_creator/document-creator-f596432f975e6ca7153432b74ad09fa8e644dbf6/document-creator-f596432f975e6ca7153432b74ad09fa8e644dbf6/src/: CMakeLists.txt
db and pdf_creator/document-creator-f596432f975e6ca7153432b74ad09fa8e644dbf6/document-creator-f596432f975e6ca7153432b74ad09fa8e644dbf6/src/document_creator/parameter_holder/: parameter_holder.cpp  parameter_holder.h
db and pdf_creator/document-creator-f596432f975e6ca7153432b74ad09fa8e644dbf6/document-creator-f596432f975e6ca7153432b74ad09fa8e644dbf6/src/document_creator/parameter_holder/parameter/: parameter.cpp  parameter.h
db and pdf_creator/document-creator-f596432f975e6ca7153432b74ad09fa8e644dbf6/document-creator-f596432f975e6ca7153432b74ad09fa8e644dbf6/src/document_creator/text_replacer/: text_replacer.cpp  text_replacer.h
db and pdf_creator/utils/: CMakeLists.txt
db and pdf_creator/utils/utils/database/database_creator/: i_database_creator.h
db and pdf_creator/utils/utils/database/database_creator/filesystem_database_creator/: filesystem_database_creator.h
db and pdf_creator/utils/utils/database/database_creator/postgres_database_creator/: postgres_database_creator.cpp  postgres_database_creator.h
db and pdf_creator/utils/utils/database/database_creator/table_creator/data_creator/: i_data_creator.h
db and pdf_creator/utils/utils/database/database_creator/table_creator/data_creator/filesystem_data_creator/: filesystem_data_creator.cpp
db and pdf_creator/utils/utils/database/database_creator/table_creator/data_creator/postgres_data_creator/: postgres_data_creator.cpp  postgres_data_creator.h
db and pdf_creator/utils/utils/database/database_creator/table_creator/filesystem_table_creator/: filesystem_table_creator.cpp  filesystem_table_creator.h
db and pdf_creator/utils/utils/database/database_creator/table_creator/postgres_table_creator/: postgres_table_creator.cpp  postgres_table_creator.h
src/calculator/: CMakeLists.txt  i_nameable.h  i_updateable.h
src/calculator/calculator/: calculator.cpp  calculator.h
src/calculator/calculator/balcony_group/: balcony_group.cpp  balcony_group.h
src/calculator/calculator/balcony_group/balcony_parameter_holder/: balcony_parameter_holder.cpp  balcony_parameter_holder.h
src/calculator/calculator/balcony_group/balcony_parameter_holder/concrete_parameters/countable_square_multiply_enumerable_parameter/: countable_square_multiply_enumerable_parameter.cpp  countable_square_multiply_enumerable_parameter.h
src/calculator/calculator/common_interfaces/: i_cloneable.h  i_costable.h  i_updatable.h
src/calculator/calculator/sized_parameter_holder/: i_sized_parameter_holder_parentable.h  sized_parameter_holder.cpp  sized_parameter_holder.h
src/calculator/calculator/sized_parameter_holder/parameter_holder/: parameter_holder.cpp  parameter_holder.h
src/calculator/calculator/sized_parameter_holder/parameter_holder/base_holder/: base_holder.cpp  base_holder.h
src/calculator/calculator/sized_parameter_holder/parameter_holder/base_holder/base_holder_visitor/: i_base_holder_visitor.h
src/calculator/calculator/value_interfaces/: i_value.h  i_value_enumerable.h
src/calculator/calculator/value_interfaces/parameter_interfaces/: i_parameter.h  i_parameter_enumerable.h
src/calculator/calculator/window_group/: window_group.cpp  window_group.h
src/calculator/calculator/window_group/window/: window.cpp  window.h
src/calculator/calculator/window_group/window/glassy_object/: glassy_object.cpp  glassy_object.h
src/calculator/calculator/window_group/window/parameters/concrete_parameters/: i_glassy_object_parentable.h
src/calculator/calculator/window_group/window/parameters/concrete_parameters/bottom_square_multiply_enumerable_parameter/: bottom_square_multiply_enumerable_parameter.cpp  bottom_square_multiply_enumerable_parameter.h
src/calculator/calculator/window_group/window/parameters/concrete_parameters/glass_meter_price_single_parameter/: glass_meter_price_single_parameter.cpp  glass_meter_price_single_parameter.h
src/calculator/calculator/window_group/window/parameters/enumerable_parameter/: enumerable_parameter.cpp  enumerable_parameter.h
src/calculator/calculator/window_group/window/parameters/single_parameter/: single_parameter.cpp  single_parameter.h
src/calculator/calculator/window_group/window/parameters/single_parameter/single_value/: single_value.cpp  (+1 more)
src/calculator/value_interfaces/: i_value.h  i_value_enumerable.h
src/calculator/value_interfaces/parameter_interfaces/: i_parameter.h
src/calculator/value_interfaces/value_visitor/: i_value_visitor.h
src/calculator/window_group/: window_group.cpp  window_group.h
src/calculator/window_group/window/: glassy_object.cpp  glassy_object.h  window.cpp  window.h
src/calculator/window_group/window/glassy_object_visitor/: i_glassy_object_visitor.h
src/calculator/window_group/window/glassy_object_visitor/concrete_visitors/glassy_object_printing_visitor/: glassy_object_printing_visitor.cpp  glassy_object_printing_visitor.h
(+1038 files in other folders)
